[workspace]
resolver = "2"
members = [
    "rmk",
    "boards/rp2040",
    # Uncomment to choose one chip you want to use
    "boards/stm32h7",
    # "boards/stm32f4"
]
default-members = [
    "rmk", 
    # Uncomment to choose one chip you want to use as default
    # "boards/rp2040",
    "boards/stm32h7",
    # "boards/stm32f4"
]

# Profile dev: optimize for fast compiling with debug info
[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
