[package]
name = "rmk-config"
version = "0.5.2"
edition = "2021"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Config crate of RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
config = "0.15"
toml = "0.8"
cargo_toml = "0.22"
serde = "1.0"
serde_derive = "1.0"
serde-inline-default = "0.2.3"
once_cell = "1.19"
pest = "2.8"
pest_derive = "2.8"
paste = "1.0.15"
