[package]
name = "rmk-config"
version = "0.5.6"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Config crate of RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
config = "0.15"
toml = "0.8"
cargo_toml = "0.22"
serde = "1.0"
serde_derive = "1.0"
serde-inline-default = "0.2.3"
once_cell = "1.19"
pest = "2.8"
pest_derive = "2.8"
paste = "1.0.15"

[features]
default = ["per_key_profile"] #TODO remove per_key_profile from defaults
## If you want to customize each tap hold (TH LT MT) key's profile separately (the positional configuration in matrix map is not enough)
## then you may enable this feature - Warning: it will increase the RAM usage of the keymaps with ROW*COL*LAYER_NUM*32bits
per_key_profile = []