[package]
name = "rmk-config"
version = "0.6.1"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Config crate of RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
config = "0.15"
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "1.0.0"
once_cell = "1.19"
pest = "2.8"
pest_derive = "2.8"
paste = "1.0.15"
# Build-time only (rmk-config never ships in the firmware binary): serialize +
# compress the layout-geometry blob. The host inflates with the same codec.
postcard = { version = "1", default-features = false, features = ["alloc"] }
miniz_oxide = "0.9"
