[workspace]
resolver = "2"
members = ["rynk-host", "rynk-cli"]

[workspace.package]
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Host-side tooling for the Rynk protocol — RMK's native host communication channel"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haobogu/rmk"
version = "0.1.0"

[workspace.dependencies]
rmk-types = { path = "../rmk-types", features = ["host"] }
postcard = "1.1"
serde = { version = "1.0", features = ["derive"] }
heapless = { version = "0.9", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
nusb = "0.2"
btleplug = "0.11"
uuid = "1.18"

# Larger context: rmk-types under `features = ["host"]` enables `rynk`, `bulk`,
# `_ble`, and `split`. That gives the host crate the union of every wire-type
# Vec capacity (`COMBO_SIZE = MAX_COMBO_SIZE`, etc.) so a single Client build
# can talk to any firmware regardless of its compiled-in limits.
