[workspace]
resolver = "2"
members = [
    "rmk-host",
    "rmk-host-serial",
    "rmk-host-ble",
    "rmk-rynk-e2e",
]

[workspace.package]
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Host-side tooling for the Rynk protocol — RMK's native host communication channel"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haobogu/rmk"
version = "0.1.0"

[workspace.dependencies]
rmk-types = { path = "../rmk-types", features = ["host"] }
postcard = { version = "1.1", features = ["experimental-derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2.0"
log = "0.4"
tokio = "1.47"
tokio-serial = "5.4"
bluest = "0.6"
futures = "0.3"
