[package]
name = "rmk-macro"
version = "0.6.8"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Proc-macro crate of RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
rmk-config = { path = "../rmk-config", version = "=0.5.6"}
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
darling = "0.20"
once_cell = "1.19"
cargo_toml = "0.22"
pest = "2.8"
pest_derive = "2.8"

[lib]
proc-macro = true

[features]
default = ["per_key_profile"] #TODO remove per_key_profile from defaults
## If you want to customize each tap hold (TH LT MT) key's profile separately (the positional configuration in matrix map is not enough)
## then you may enable this feature - Warning: it will increase the RAM usage of the keymaps with ROW*COL*LAYER_NUM*32bits
per_key_profile = []
