[package]
name = "rmk-macro"
version = "0.7.1"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Proc-macro crate of RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
rmk-config = { path = "../rmk-config", version = "=0.6.1"}
rmk-types = { path = "../rmk-types", version = "=0.2.2", features = ["_codegen"] }
toml = "0.9.8"
serde = "1.0"
serde_derive = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
prettyplease = "0.2"
darling = "0.20"
once_cell = "1.19"
cargo_toml = "0.22"
pest = "2.8"
pest_derive = "2.8"
strum = { version = "0.27", default-features = false, features = ["derive"] }

[lib]
proc-macro = true
doctest = false

[dev-dependencies]
macrotest = "1.0"
trybuild = "1.0"
rmk = { path = "tests/rmk", features = ["split"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1", features = ["experimental-derive"] }
