[package]
name = "rmk-macro"
version = "0.7.1"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Proc-macro crate of RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
rmk-config = { path = "../rmk-config", version = "=0.6.1"}
rmk-types = { path = "../rmk-types", version = "=0.2.2", features = ["_codegen"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
darling = "0.23"
cargo_toml = "0.22"
strum = { version = "0.28", default-features = false, features = ["derive"] }

[features]
## Enable hardware watchdog code generation
watchdog = []

[lib]
proc-macro = true
doctest = false

[dev-dependencies]
macrotest = "1.0"
trybuild = "1.0"
rmk = { path = "tests/rmk" }
