[package]
name = "rmk-types"
version = "0.2.2"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Common types in RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
defmt = { version = "1.0", optional = true }

serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", features = ["experimental-derive"] }
postcard-schema = { version = "0.2", default-features = false, features = ["derive", "heapless-v0_9"], optional = true }
postcard-rpc = { version = "0.12", default-features = false, optional = true }
heapless = { version = "0.9", default-features = false, features = ["serde"] }
strum = { version = "0.28", default-features = false, features = ["derive"] }

bitfield-struct = "0.12"

[build-dependencies]
rmk-config = { path = "../rmk-config", version = "=0.6.1" }
toml = "1.0"

[features]
default = []
defmt = [
    "dep:defmt",
    "postcard/defmt",
    "heapless/defmt",
]
# Feature for proc-macro code generation only, not included in firmware
_codegen = []
# Feature for RMK native protocol schema/endpoint support
rmk_protocol = ["dep:postcard-rpc", "dep:postcard-schema"]
# Bulk transfer endpoints for MCUs with sufficient RAM.
# Enables multi-element bulk keymap/combo/morse endpoints and PROTOCOL_MAX_BULK_SIZE constant.
bulk = ["rmk_protocol"]
# Host tool: enables rmk_protocol with generous Vec capacities for protocol types.
# Firmware should use `rmk_protocol` instead — Vec sizes come from keyboard.toml.
# Includes all optional endpoint groups so the host can talk to any firmware.
host = ["rmk_protocol", "bulk", "_ble", "split"]
# Build-time only features: forwarded from rmk to control constant generation in build.rs.
# Also used as `#[cfg(feature = "...")]` guards for protocol endpoint/topic gating.
_ble = []
split = []
passkey_entry = []
