[package]
name = "rmk-types"
version = "0.2.2"
edition = "2024"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Common types in RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
defmt = { version = "1.0", optional = true }

serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false, features = ["experimental-derive"] }
heapless = { version = "0.9", default-features = false, features = ["serde"] }
strum = { version = "0.28", default-features = false, features = ["derive"] }

bitfield-struct = "0.13"

# TypeScript type + wasm-bindgen ABI generation for the web client
tsify = { version = "0.5", optional = true, default-features = false, features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[build-dependencies]
rmk-config = { path = "../rmk-config", version = "=0.6.1" }
toml = "1.0"

[features]
default = []
defmt = [
    "dep:defmt",
    "postcard/defmt",
    "heapless/defmt",
]
# Feature for proc-macro code generation only, not included in firmware
_codegen = []
# Feature for RMK native (rynk) protocol support
rynk = []
# Bulk transfer endpoints for MCUs with sufficient RAM.
# Enables multi-element bulk keymap/combo/morse endpoints and BULK_SIZE constant.
bulk = ["rynk"]
# Host tool: uses protocol ceiling values for Vec capacities.
host = ["rynk", "bulk", "_ble", "split", "steno"]
# TypeScript type + wasm ABI export for the web client. Enabled by a codegen/wasm
# build, never by firmware.
wasm = ["dep:tsify", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "host"]
# Build-time only features: forwarded from rmk to control constant generation in build.rs.
_ble = []
split = []
display = []
passkey_entry = []
# Stenography (Plover HID) support: `StenoKey` + `Action::Steno` variant.
steno = []
