[package]
name = "rmk"
version = "0.8.2"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../README.md"
edition = "2024"
license = "MIT OR Apache-2.0"
resolver = "2"

[dependencies]
rmk-macro = { version = "=0.7.1", path = "../rmk-macro" }
rmk-types = { version = "=0.2.2", path = "../rmk-types" }
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }
embedded-io-async = { version = "0.7", optional = true }
embedded-storage = { version = "0.3", optional = true }
embedded-storage-async = { version = "0.4", optional = true }

embassy-embedded-hal = { version = "0.6", optional = true }
embassy-time = { version = "0.5" }
embassy-usb = { version = "0.6", features = [
    "max-interface-count-8",
    "max-handler-count-8",
] }
embassy-sync = { version = "0.8" }
embassy-futures = { version = "0.1" }
embassy-usb-logger = { version = "0.6", optional = true }

futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }

heapless = "0.9"
usbd-hid = "0.10"
static_cell = "2"
sequential-storage = { version = "7.1.0", features = ["postcard"] }

defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
byteorder = { version = "1", default-features = false, optional = true }
postcard-rpc = { version = "0.12", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", features = ["experimental-derive"] }

# Used in macro
paste = "1"

# Display dependencies
ssd1306 = { version = "0.10", optional = true, features = ["async"] }
oled_async = { version = "0.2.1", optional = true, features = ["i2c"] }
lcd-async = { version = "0.1", optional = true, default-features = false }
embedded-graphics = { version = "0.8", optional = true }
display-interface = { version = "0.5", optional = true }
display-interface-i2c = { version = "0.5", optional = true }

# Optional dependencies
# BLE dependencies
trouble-host = { git = "https://github.com/haobogu/trouble", rev = "fdfa1d7001418ca913ea97f7af11aae7bc779098", features = [
    "gatt",
    "scan",
    "derive",
    "security",
    "serde",
], optional = true }
rand_core = { version = "0.6", optional = true }
bt-hci = { version = "0.8", optional = true }

# nRF dependencies
embassy-nrf = { version = "0.10", features = [
    "unstable-pac",
    "time",
], optional = true }

# RP2040 dependencies
embassy-rp = { version = "0.10", optional = true }
embassy-hal-internal = { version = "0.5.0", optional = true }
rp-pac = { version = "7.0.0", optional = true }
pio = { version = "0.3.0", optional = true }
fixed = { version = "1.28.0", optional = true }

# ESP32 dependencies
esp-hal = { version = "1.1", optional = true }

# Document feature
document-features = "0.2"

[dev-dependencies]
# A hack for enabling 'std' feature in testing, ref: https://github.com/rust-lang/cargo/issues/2911
rmk = { path = ".", default-features = false, features = ["std", "log"] }
critical-section = { version = "1.2", features = ["std"] }
env_logger = "0.11"
ctor = "1.0"
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }

[build-dependencies]
crc32fast = "1.3"

[package.metadata.docs.rs]
features = ["split", "vial", "async_matrix", "_ble"]

# Architecture specific dependencies
[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { version = "0.7" }

[features]
default = ["defmt", "storage", "vial", "vial_lock"]

## Enable host configurator support
host = ["dep:byteorder"]

## Enable vial support
vial = ["host"]

## Enable vial lock feature
vial_lock = ["vial", "host_security"]

## Enable physical key unlock and matrix state tracking (shared between vial_lock and rmk_protocol)
host_security = []

## Enable RMK protocol support (new protocol, mutually exclusive with vial)
rmk_protocol = ["host", "host_security", "dep:postcard-rpc", "rmk-types/rmk_protocol"]

## Enable bulk transfer endpoints for RMK protocol on MCUs with sufficient RAM
bulk_transfer = ["rmk_protocol", "rmk-types/bulk"]

## Enable the storage. The storage is optional to save memory
storage = [
    "dep:embedded-storage",
    "dep:embedded-storage-async",
    "dep:embassy-embedded-hal",
]

## Enable defmt support
defmt = [
    "dep:defmt",
    "rmk-types/defmt",
    "embedded-hal/defmt-03",
    "embedded-hal-async/defmt-03",
    "embedded-io-async/defmt",
    "embassy-time/defmt",
    "embassy-usb/defmt",
    "embassy-sync/defmt",
    "embassy-futures/defmt",
    "usbd-hid/defmt",
    "sequential-storage/defmt",
    "embassy-nrf?/defmt",
    "postcard/use-defmt",
    "trouble-host?/defmt",
    "bt-hci?/defmt",
    "heapless/defmt",
]

## Enable logging via usb
usb_log = ["dep:embassy-usb-logger", "log"]
## Use log, this feature cannot be enabled when defmt is enabled
log = ["dep:log", "trouble-host?/log"]

## Activate the embassy-time mock driver for deterministic, fast test timing.
## (Despite the historic name, this feature does NOT enable embassy-time/std —
## it swaps in the manually-advanced mock clock that the test harness drives
## via `tests/common/test_block_on.rs`.)
std = [
    "embassy-time/mock-driver",
    "embassy-time/generic-queue-128",
]

## Enable display support (traits + processor)
display = ["dep:embedded-graphics", "rmk-types/display"]
## Enable SSD1306 OLED driver
ssd1306 = ["display", "dep:ssd1306", "dep:display-interface", "dep:display-interface-i2c"]
## Enable OLED drivers via oled_async (SH1106, SH1107, SH1108, SSD1309)
oled_async = ["display", "dep:oled_async", "dep:display-interface", "dep:display-interface-i2c"]
sh1106 = ["oled_async"]
sh1107 = ["oled_async"]
sh1108 = ["oled_async"]
ssd1309 = ["oled_async"]
## Enable TFT drivers via lcd-async (GC9107, GC9A01, ILI9225, ILI9341, ILI9342C, ILI9486, ILI9488, RM67162, ST7735, ST7789, ST7796).
lcd_async = ["display", "dep:lcd-async"]
gc9107 = ["lcd_async"]
gc9a01 = ["lcd_async"]
ili9225 = ["lcd_async"]
ili9341 = ["lcd_async"]
ili9342c = ["lcd_async"]
ili9486 = ["lcd_async"]
ili9488 = ["lcd_async"]
rm67162 = ["lcd_async"]
st7735 = ["lcd_async"]
st7789 = ["lcd_async"]
st7796 = ["lcd_async"]

## Enable async matrix scanning
async_matrix = []

## Enable split keyboard support.
split = [
    "dep:embedded-io-async",
    "trouble-host?/gatt-client-notification-queue-size-4",
    "rmk-types/split",
]

## Enable feature to use rp2040 specific features, like PIO and bootrom
rp2040 = [
    "dep:embassy-rp",
    "dep:embassy-hal-internal",
    "dep:rp-pac",
    "dep:pio",
    "dep:fixed",
]

## Enable feature if you're using Adafruit nRF52 bootloader and want bootloader jumping key
adafruit_bl = ["_nrf_ble"]

## Enable feature if you're using the ZSA Voyager ignition DFU bootloader
zsa_voyager_bl = []

## Enable Plover HID stenography support: adds the steno HID descriptor,
## the steno USB writer endpoint, and the `Action::Steno` variant.
steno = ["rmk-types/steno"]

## Internal feature that indicates no USB is used, this feature will be auto-activated for some chips
_no_usb = []

#! ### BLE feature flags
#!
#! ⚠️ Due to the limitation of docs.rs, functions gated by BLE features won't show in docs.rs. You have to head to [`examples`](https://github.com/HaoboGu/rmk/tree/main/examples) folder of RMK repo for their usages.
## Enable feature if you want to use nRF54LM20 with BLE.
nrf54lm20_ble = ["_nrf_ble"]
## Enable feature if you want to use nRF54L15 with BLE.
nrf54l15_ble = ["_nrf_ble", "_no_usb"]
## Enable feature if you want to use nRF52840 with BLE.
nrf52840_ble = ["_nrf_ble"]
## Enable feature if you want to use nRF52833 with BLE.
nrf52833_ble = ["_nrf_ble"]
## Enable feature if you want to use nRF52832 with BLE.
nrf52832_ble = ["_nrf_ble", "_no_usb"]
## Enable feature if you want to use nRF52811 with BLE.
nrf52811_ble = ["_nrf_ble", "_no_usb"]
## Enable feature if you want to use nRF52810 with BLE.
nrf52810_ble = ["_nrf_ble", "_no_usb"]
_nrf_ble = ["_ble", "dep:embassy-nrf"]

## Enable feature if you want to use ESP32C3 with BLE.
esp32c3_ble = ["_esp_ble", "_no_usb"]
## Enable feature if you want to use ESP32C6 with BLE.
esp32c6_ble = ["_esp_ble", "_no_usb"]
## Enable feature if you want to use ESP32S3 with BLE.
esp32s3_ble = ["_esp_ble"]
_esp_ble = ["_ble", "dep:esp-hal"]

## Enable feature if you want to use RP2040W with BLE.
pico_w_ble = ["_ble", "dep:embassy-rp"]

## Enable feature if you want to use SF32LB52x with BLE.
sf32lb52x_ble = ["_ble"]

## Enable passkey entry support for BLE pairing
passkey_entry = ["_ble", "rmk-types/passkey_entry"]

## Enable feature if you want to use trouble BLE stack
_ble = ["dep:trouble-host", "dep:rand_core", "dep:bt-hci", "storage", "rmk-types/_ble"]

[lib]
# Don't run doctest for lib
doctest = false
